--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,20 +4,7 @@
     <string name="title_activity_habits">Habits</string>
     <string name="title_activity_settings">Settings</string>
 
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="settings">Settings</string>
     <string name="defaultTasks">Default Tasks</string>
     <string name="habits">Habits</string>
@@ -29,10 +16,32 @@
     <string name="duration">Duration (min)</string>
     <string name="to_short">To short!</string>
     <string name="to_long">To long!</string>
-    <string name="title_must_match">Title must be a number of minutes (e.g. 30) or contain hour and
+    <string name="duration_must_match">Duration must be a number of minutes (e.g. 30) or contain hour and
         minute in format: h:m (e.g. 1:30)</string>
     <string name="save">Save</string>
     <string name="provide_correct_data">You need to provide correct data to all fields!</string>
     <string name="saved">Saved!</string>
     <string name="removed">Removed!</string>
+
+    <string name="notifications">Notifications</string>
+    <string name="start_day_time">Start day time</string>
+    <string name="end_day_time">End day time</string>
+    <string name="number_of_days_ahead">Number of days ahead</string>
+    <string name="active_dark_mode">Active Dark Mode</string>
+    <string name="active_dark_mode_on">Dark Mode Active</string>
+    <string name="active_dark_mode_off">Dark Mode inactive</string>
+    <string name="disable_notifications">Disable notifications</string>
+    <string name="disable_notifications_on">You will no longer receive notifications</string>
+    <string name="disable_notifications_off">You will receive all notifications</string>
+    <string name="disable_vibrations">Disable vibrations</string>
+    <string name="disable_vibrations_on">Vibrations will no longer occur</string>
+    <string name="disable_vibrations_off">Vibrations will occur</string>
+    <string name="notifications_sound">Notifications sound</string>
+    <string name="notifications_volume">Volume</string>
+    <string name="day_time_match">Day time must match: h:mm (e.g. 11:30)</string>
+    <string name="day_time_range">Day time range: 0:00 – 23:59</string>
+    <string name="start_day_time_wrong">Start day time must be earlier than end day time</string>
+    <string name="not_correct_value">Not correct value provided</string>
+
+
 </resources>
