--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="start_day_time_wrong">Start day time must be earlier than end day time</string>
     <string name="end_day_time_wrong">End day time must be later than start day time</string>
     <string name="not_correct_value">Not correct value provided</string>
+    <string name="number_of_days_ahead_range">Number of days range: 1–14</string>
 
 
 </resources>
