--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,7 @@
     <string name="number_of_days_ahead_range">Number of days range: 1–14</string>
 
     <string name="add_new_task">Add new task</string>
+    <string name="add_default_task">Add default task</string>
+    <string name="copy_tasks_from_day">Copy tasks from day</string>
 
 </resources>
