--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,7 @@
     <string name="copy_tasks_from_day">Copy tasks from day</string>
     <string name="show_tasks_done">Show tasks done</string>
     <string name="hide_tasks_done">Hide tasks done</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 
 </resources>
